# curppf

./: CMakeLists.txt  README.md
data/: big.ply  box.ply  boxcursample.ply  boxsample.pcd  cola.pcd  cola.ply  mario.ply  model.pcd  model.ply  new.ply  untitled.pcd
data/output/: 1.txt  2.txt  perdata.txt
include/myppf/: ppf_helpers.hpp  ppf_match.hpp
para/: data.yaml  settings.yaml
src/: ppf_helpers.cpp  ppf_match.cpp  test.cpp
